<resources>
    <string name="app_name">Template</string>

    <!-- SearchFragment-->
    <string name="search_text">검색어를 입력하세요</string>
    <string name="search_button_search_hint">검색</string>
    <string name="search_button_search_image_hint">이미지 검색</string>
    <string name="search_button_image_dark_hint">이미지 어둡게</string>

    <!-- SignFirstFragment-->
    <string name="SignFirst_Text1">당신 근처의 당근마켓</string>
    <string name="SignFirst_Text2">     내 동네를 설정하고\n당근마켓을 시작해 보세요</string>


    <!---->

    <!--SignSecondFragment-->
    <string name="SignSecond_Text1">현재 위치로 찾기</string>
    <string name="SignSecond_Text2">검색 결과가 없습니다.\n동네 이름을 다시 확인해주세요!</string>
    <string name="SignSecond_Text3">동네 이름 다시 검색하기</string>
    <string name="SignSecond_Edit1">내 동네 이름(동,읍,면)으로 검색</string>
    <string name="SignSecond_Rv_Title">근처동네</string>
    <!---->


    <!-- SignThirdFragment-->
    <string name="SignThird_Text_ToolBar">전화번호 인증</string>
    <string name="SignThird_Question_Text">전화번호가 변경되었나요? </string>
    <string name="SignThird_Text_EmailFind">이메일로 계정찾기</string>
    <string name="SignThird_Text_Info">당근마켓은 휴대폰 번호로 가입해요.\n번호는 안전하게 보관되며 어디에도\n공개되지 않아요.</string>
    <string name="SignThird_Edit_PhoneNumberInsert">휴대폰 번호를 입력해 주세요</string>
    <string name="SignThird_Text_Certification_Response">인증문자 받기</string>
    <string name="SignThird_Edit_Certification_Insert">인증번호를 입력해주세요</string>
    <string name="SignThird_Text_caution">어던 경우에도 타인에게 공유하지 마세요!</string>
    <string name="SignThird_Text_Certification_Confirm">인증번호 확인</string>
    <!---->

    <string-array name="categort">
        <item>디지털기기</item>
        <item>생활가전</item>
        <item>가구/인테리어</item>
        <item>유아동</item>
        <item>생활/가공식품</item>
        <item>유아도서</item>
        <item>스포츠/레저</item>
        <item>여성잡화</item>
        <item>여성의류</item>
        <item>남성패션/잡화</item>
        <item>게임/취미</item>
        <item>뷰티/미용</item>
        <item>반려동물용품</item>
        <item>도서/티켓/음반</item>
        <item>식물</item>
        <item>기타 중고물품</item>
    </string-array>

</resources>