<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <EditText
            android:id="@+id/search_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/search_text"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/search_button_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_button_search_hint"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/search_button_search_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_button_search_image_hint"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/test_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_button_image_dark_hint"/>

        <TextView
            android:id="@+id/search_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           />

        <ImageView
            android:id="@+id/search_image_search"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>