<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/signup_third_toolbar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="bottom"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">
            <ImageView
                android:id="@+id/signup_third_back"
                android:layout_width="25dp"
                android:layout_height="50dp"
                android:src="@drawable/left_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/SignThird_Text_ToolBar"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/signup_third_line"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/light_gray"
        app:layout_constraintTop_toBottomOf="@+id/signup_third_toolbar"/>

    <LinearLayout
        android:id="@+id/signup_third_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/signup_third_line"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/certification_image"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/SignThird_Text_Info"/>

    </LinearLayout>

    <EditText
        android:id="@+id/signup_third_edit_phone_number"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/signup_third_edit_shape"
        android:hint="@string/SignThird_Edit_PhoneNumberInsert"
        android:paddingLeft="10dp"
        android:inputType="number"
        android:maxLength="13"
        app:layout_constraintWidth_percent="0.92"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintTop_toBottomOf="@id/signup_third_info"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/signup_third_certification"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/signup_third_certification_response_shape"
        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintTop_toBottomOf="@id/signup_third_edit_phone_number"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <TextView
            android:id="@+id/signup_third_certification_response"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SignThird_Text_Certification_Response"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />




    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:id="@+id/signup_third_info_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintTop_toBottomOf="@id/signup_third_certification"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SignThird_Question_Text"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/signup_third_email_find"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SignThird_Text_EmailFind"
            android:textColor="@color/black"
            />


    </LinearLayout>

    <FrameLayout
        android:id="@+id/signup_third_certification_insert"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="invisible"
        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintTop_toBottomOf="@id/signup_third_info_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <EditText
                android:id="@+id/signup_third_certification_number"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/signup_third_edit_shape"
                android:hint="@string/SignThird_Edit_Certification_Insert"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:inputType="number"
                android:maxLength="6"
                app:layout_constraintTop_toBottomOf="@id/signup_third_info"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/SignThird_Text_caution"/>



            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/signup_third_certification_confirm"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/signup_third_certification_response_shape"
                app:layout_constraintTop_toBottomOf="@id/signup_third_edit_phone_number"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/SignThird_Text_Certification_Confirm"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>






    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>