<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/test">

    <EditText
        android:id="@+id/signup_second_edit_search"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#DDDEE0"
        android:drawableLeft="@drawable/search_icon_shape"
        android:hint="@string/SignSecond_Edit1"
        android:inputType="text"
        android:textColorHighlight="@color/edit_drag_color"
        android:textCursorDrawable="@drawable/cursor"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/signup_second_current_location_find"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        app:layout_constraintHeight_percent="0.04"
        app:layout_constraintTop_toBottomOf="@id/signup_second_edit_search"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:background="@drawable/button_circle_shape"
            android:gravity="center"
            app:layout_constraintHeight_percent="1"
            app:layout_constraintWidth_percent="0.95"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            >

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:src="@drawable/location_carrot_icon"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:text="@string/SignSecond_Text1"
                android:textColor="@color/white"
                android:textStyle="bold"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="1"
        app:layout_constraintHeight_percent="1"
        app:layout_constraintTop_toBottomOf="@id/signup_second_current_location_find"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >
        <LinearLayout
            android:id="@+id/signup_second_result"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="13dp"
            android:orientation="vertical"
            android:visibility="visible"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/SignSecond_Rv_Title"
                android:layout_marginTop="20dp"
                />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/signup_second_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:paddingBottom="130dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/signup_second_result_no"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="200dp"
            android:visibility="invisible"
            android:gravity="top|center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:src="@drawable/document_image"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/SignSecond_Text2"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/SignSecond_Text3"
                android:textColor="@color/carrot_color"
                android:textStyle="bold"/>
        </LinearLayout>
    </FrameLayout>




</androidx.constraintlayout.widget.ConstraintLayout>